<resources>
    <string name="login_name">登录模块</string>

    <string name="login_title">登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="login_tip">还没有账号,去注册账号?</string>

    <string name="login_register_title">注册</string>
    <string name="login_register_username_hint">请输入用户名</string>
    <string name="login_register_password_hint">请输入密码</string>
    <string name="login_register_confirm_hint">请输入确认密码</string>
    <string name="login_register_text">注册</string>
</resources>