<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerViewModel"
            type="com.hjc.learn.login.viewmodel.RegisterViewModel" />

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.hjc.library_widget.bar.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/base_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:leftImage="@mipmap/login_icon_back"
            app:titleColor="@color/base_white"
            app:titleSize="20sp"
            app:titleText="@string/login_register_title">

        </com.hjc.library_widget.bar.TitleBar>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_bar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_register_username_hint"
                android:inputType="text"
                android:text="@={registerViewModel.usernameData}"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/til_username"
            app:layout_constraintRight_toRightOf="@id/til_username"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_register_password_hint"
                android:inputType="textPassword"
                android:text="@={registerViewModel.passwordData}"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/til_password"
            app:layout_constraintRight_toRightOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_register_confirm_hint"
                android:inputType="textPassword"
                android:text="@={registerViewModel.confirmData}"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_selector_btn_login"
            android:onClick="@{onClickListener}"
            android:text="@string/login_register_text"
            android:textColor="@color/base_white"
            app:layout_constraintLeft_toLeftOf="@id/til_password"
            app:layout_constraintRight_toRightOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
